# rag-test

./: Makefile  README.md  pyproject.toml
src/: main.py
